--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   # fading_edge_scrollview: ^3.0.0
   version: ^3.0.2
   native_qr: ^0.0.3
+  firebase_core: ^2.31.1
+  firebase_crashlytics: ^3.5.6
 
 dev_dependencies:
   golden_toolkit: ^0.15.0
